--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,82 @@
+:root {
+    --padding: 15px;
+    --margin: 20px;
+    --background-color: blue;
+    --color: white;
+}
+
+html {
+    box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+    box-sizing: inherit;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+        "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+        "Helvetica Neue", sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+        monospace;
+}
+
+.App {
+    min-height: 100vh;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.quote {
+    width: 400px;
+    background-color: red;
+
+    border-radius: 8px;
+}
+
+.message {
+    margin: var(--margin);
+    text-align: center;
+    background-color: var(--background-color);
+    color: var(--color);
+}
+
+.author {
+    margin: var(--margin);
+    display: flex;
+    justify-content: flex-end;
+    background-color: var(--background-color);
+    color: var(--color);
+}
+
+.message::before {
+    content: open-quote;
+}
+
+.buttons {
+    margin: var(--margin);
+    display: flex;
+    justify-content: space-between;
+}
+
+.button {
+    background-color: var(--background-color);
+    border-radius: 8px;
+    color: var(--color);
+    padding: var(--padding);
 }
