--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 :root {
     --padding: 15px;
     --margin: 20px;
-    --background-color: blue;
-    --color: white;
+    --theme: red;
+    --background-color: white;
 }
 
 html {
@@ -40,11 +40,13 @@ code {
     display: flex;
     justify-content: center;
     align-items: center;
+
+    background-color: var(--theme);
 }
 
 .quote {
     width: 400px;
-    background-color: red;
+    background-color: var(--background-color);
 
     border-radius: 8px;
 }
@@ -53,7 +55,7 @@ code {
     margin: var(--margin);
     text-align: center;
     background-color: var(--background-color);
-    color: var(--color);
+    color: var(--theme);
 }
 
 .author {
@@ -61,7 +63,11 @@ code {
     display: flex;
     justify-content: flex-end;
     background-color: var(--background-color);
-    color: var(--color);
+    color: var(--theme);
+}
+
+.author::before {
+    content: "-- ";
 }
 
 .message::before {
@@ -75,8 +81,8 @@ code {
 }
 
 .button {
-    background-color: var(--background-color);
+    background-color: var(--theme);
     border-radius: 8px;
-    color: var(--color);
+    color: var(--background-color);
     padding: var(--padding);
 }
