removed hardcoded color theme

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 :root {
     --padding: 15px;
     --margin: 20px;
-    --theme: red;
+    --theme: dodgerblue;
     --background-color: white;
 }
 
